# research-agent

./: .env  .gitignore  README.md  TASKS.md  examples.txt  main.py  pyproject.toml
agent/: models.py  prompt.py  react.prompt  react_agent.py  tools.py  tracing.py
agent/tools/: citations.py  current_date.py  python_exec.py  search.py  think.py  web_fetch.py
utils/: datetime.py  prompt.py  schedule.py
