[project]
name = "research-agent"
version = "0.1.0"
description = "Cheap research agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "pytest>=8.4.0",
    "ddgs>=7.0.0",
]
